--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -617,23 +617,23 @@ section {
   color: #34b7a7;
 }
 
-.about .content p:last-child {
+/* .about .content p:last-child {
   margin-bottom: 0;
-}
+} */
 
 div.carousel-item {
   background-color: #d6d2d7;
-  height: 1000px;
+  height: 100%;
 }
 .carouselControl i {
   color: #222222;
 }
 
-.carousel-inner {
-  max-height: 80vh;
+.carousel {
+  width: 100%;
+  height: 70%;
   
 }
-
 .carousel-inner h3 {
   text-align: center;
   font-size: 3em;
@@ -642,9 +642,10 @@ div.carousel-item {
   text-align: start;
   font-size: 1.5em;
 }
-.carousel-image {
-  background-size: cover;
-  height: 500px;
+.carousel-image img{
+  background-size:cover;
+  max-height: 100%;
+  max-width: 100%;
   margin: 2em;
 }
 
@@ -668,7 +669,7 @@ div.carousel-item {
   color: #222222;
 }
 
-.skills .progress .skill .val {
+/* .skills .progress .skill .val {
   float: right;
   font-style: normal;
 }
@@ -682,7 +683,7 @@ div.carousel-item {
   height: 10px;
   transition: 0.9s;
   background-color: #34b7a7;
-}
+} */
 
 /*--------------------------------------------------------------
 # Facts
@@ -875,6 +876,7 @@ a.resume-download {
   transition: ease-in-out 0.3s;
   position: relative;
   bottom: 0;
+  margin: 1em 30%;
   box-shadow: 0px 0 35px 0 rgba(0, 0, 0, 0.08);
 }
 
